--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,20 +13,14 @@ import { SITE } from "@consts";
         </div>
       </Link>
       <nav class="flex gap-1">
-        <Link href="/blog">
-          blog
-        </Link>
-        <span>
-          {`/`}
-        </span>
-        <Link href="/work">
-          work
+        <Link href="https://drive.google.com/file/d/1zrT3Yn2V3EFgJeGfT-rFMu90nAsqcUqH/view" external>
+          currículum 
         </Link>
         <span>
           {`/`}
         </span>
         <Link href="/projects">
-          projects
+          proyectos
         </Link>
       </nav>
     </div>
