--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,22 +7,22 @@ import Link from "@components/Link.astro";
 import { dateRange } from "@lib/utils";
 import { SITE, HOME, SOCIALS } from "@consts";
 
-const blog = (await getCollection("blog"))
-  .filter(post => !post.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0,SITE.NUM_POSTS_ON_HOMEPAGE);
 
 const projects = (await getCollection("projects"))
-  .filter(project => !project.data.draft)
-  .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf())
-  .slice(0,SITE.NUM_PROJECTS_ON_HOMEPAGE);
+  .filter((project: { data: { draft: boolean } }) => !project.data.draft)
+  .sort((a: { data: { date: Date } }, b: { data: { date: Date } }) =>
+    b.data.date.valueOf() - a.data.date.valueOf()
+  )
+  .slice(0, SITE.NUM_PROJECTS_ON_HOMEPAGE);
 
 const allwork = (await getCollection("work"))
-  .sort((a, b) => new Date(b.data.dateStart).valueOf() - new Date(a.data.dateStart).valueOf())
-  .slice(0,SITE.NUM_WORKS_ON_HOMEPAGE);
+  .sort((a: { data: { dateStart: Date } }, b: { data: { dateStart: Date } }) =>
+    new Date(b.data.dateStart).valueOf() - new Date(a.data.dateStart).valueOf()
+  )
+  .slice(0, SITE.NUM_WORKS_ON_HOMEPAGE);
 
 const work = await Promise.all(
-  allwork.map(async (item) => {
+  allwork.map(async (item: unknown) => {
     const { Content } = await item.render();
     return { ...item, Content };
   })
@@ -33,32 +33,17 @@ const work = await Promise.all(
 <PageLayout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h4 class="animate font-semibold text-black dark:text-white">
-      Hi, I'm Nano <span class="text-xl">👋🏻</span> 
+      Hola, mi nombre es Felipe <span class="text-xl">👋🏻</span> 
     </h4>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <p class="animate">
-            I am a minimal, seo friendly, accessible portfolio and blog for developers. 
-            I am an even more lightweight version of my popular theme
-            <Link href="https://github.com/markhorn-dev/astro-sphere" aria-label="Astro Sphere on Github" external>
-              Astro Sphere
-            </Link>.
-            I have a lighthouse scores of 100 across the board for performance, 
-            accesibility, best practices and SEO.
+            Soy QA Tester y actualmente trabajo en Qualis Lab, donde contribuyo al diseño, análisis y ejecución de casos de prueba para garantizar la calidad y una excelente experiencia de usuario.
           </p>
+
           <p class="animate">
-            I come packed with full type safety, a sitemap, an rss feed, markdown 
-            and mdx support (use components in your markdown) through astro integrations.
-            I am styled with tailwind and come preconfigured with light, dark and 
-            system/os theme preferences out of the box.
-          </p>
-          <p class="animate">
-            Visit
-            <Link href="https://github.com/markhorn-dev/astro-nano" aria-label="Astro Nano on Github" external>
-              Astro Nano on Github
-            </Link>
-            to fork the repository, read the docs or one-click deploy on Vercel or Netlify. 
+            Actualmente, formo parte de un equipo en el que diseño y ejecuto casos de prueba para soluciones automatizadas como IVRs y las APIs relacionadas, documentando defectos y áreas de mejora.
           </p>
         </article>
       </section>
@@ -66,29 +51,11 @@ const work = await Promise.all(
       <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
-            Latest posts
+            Experiencia laboral
           </h5>
-          <Link href="/blog">
-            See all posts
-          </Link>
-        </div>
-        <ul class="flex flex-col gap-4">
-          {blog.map(post => (
-            <li>
-              <ArrowCard entry={post} />
-            </li>
-          ))}
-        </ul>
-      </section>
-
-      <section class="animate space-y-6">
-        <div class="flex flex-wrap gap-y-2 items-center justify-between">
-          <h5 class="font-semibold text-black dark:text-white">
-            Work Experience
-          </h5>
-          <Link href="/work">
+          <!-- <Link href="/work">
             See all work
-          </Link>
+            </Link> -->
         </div>
         <ul class="flex flex-col space-y-4">
           {work.map(entry => (
@@ -109,33 +76,32 @@ const work = await Promise.all(
           ))}
         </ul>
       </section>
-
+      
       <section class="animate space-y-6">
         <div class="flex flex-wrap gap-y-2 items-center justify-between">
           <h5 class="font-semibold text-black dark:text-white">
-            Recent projects
+            Proyectos
           </h5>
-          <Link href="/projects">
-            See all projects
-          </Link>
-        </div>
+          <!-- <Link href="/projects">
+          See all projects
+          </Link> -->
+      </div>
         <ul class="flex flex-col gap-4">
-          {projects.map(project => (
+          {projects.map((project: unknown) => (
             <li>
               <ArrowCard entry={project} />
             </li>
           ))}
         </ul>
       </section>
-
+      
       <section class="animate space-y-4">
         <h5 class="font-semibold text-black dark:text-white">
-          Let's Connect
+          Conectemos
         </h5>
         <article>
           <p>
-            If you want to get in touch with me about something or just to say hi,
-            reach out on social media or send me an email.
+            Si quieres ponerte en contacto conmigo para hablar de algo o simplemente para saludarme, escríbeme a través de LinkedIn o envíame un correo electrónico.
           </p>
         </article>
         <ul class="flex flex-wrap gap-2">
@@ -148,7 +114,8 @@ const work = await Promise.all(
             </li>
           ))}
           <li class="line-clamp-1">
-            <Link href={`mailto:${SITE.EMAIL}`} aria-label={`Email ${SITE.NAME}`}>
+            <Link href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=n.felialvarez@gmail.com" external
+            >
               {SITE.EMAIL}
             </Link>
           </li>
