--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -9,7 +9,7 @@ import Link from "@components/Link.astro";
 
 export async function getStaticPaths() {
   const projects = (await getCollection("projects"))
-    .filter(post => !post.data.draft)
+    .filter((post: { data: { draft: unknown; }; }) => !post.data.draft)
     .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
   return projects.map((project) => ({
     params: { slug: project.slug },
@@ -26,7 +26,7 @@ const { Content } = await project.render();
   <Container>
     <div class="animate">
       <BackToPrev href="/projects">
-        Back to projects
+        Volver a Proyectos
       </BackToPrev>
     </div>
     <div class="space-y-1 my-10">
@@ -46,7 +46,7 @@ const { Content } = await project.render();
         <nav class="animate flex gap-1">
           {project.data.demoURL && (
             <Link href={project.data.demoURL} external>
-              demo
+              web
             </Link>
           )}
           {project.data.demoURL && project.data.repoURL && (
@@ -54,7 +54,7 @@ const { Content } = await project.render();
           )}
           {project.data.repoURL && (
             <Link href={project.data.repoURL} external>
-              repo
+              repositorio
             </Link>
           )}
         </nav>
