--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -20,7 +20,7 @@ const work = await Promise.all(
   <Container>
     <div class="space-y-10">
       <div class="animate font-semibold text-black dark:text-white">
-        Work
+        Experiencia laboral
       </div>
       <ul class="flex flex-col space-y-4">
         { 
@@ -42,10 +42,6 @@ const work = await Promise.all(
           ))
         }
       </ul>
-<!-- 
-      <ul class="animate flex flex-col gap-4">
-
-      </ul> -->
     </div>
   </Container>
 </PageLayout>
