--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,6 +22,12 @@ import { SITE } from "@consts";
         <Link href="/projects">
           proyectos
         </Link>
+        <span>
+          {`/`}
+        </span>
+        <Link href="/blog">
+          blogs
+        </Link>
       </nav>
     </div>
   </Container>
